crates/awbw-replay/tests/snapshots/snapshots__replay_snapshots@replay_1598747_null-min-rating.zip.snap
---
source: crates/awbw-replay/tests/snapshots.rs
expression: snapshot
input_file: assets/replays/replay_1598747_null-min-rating.zip
---
{
  "checksum": "0x3c8ee3432b072924d166e90c7a033a4fb3a972bfe095fdd582b3a5e9c4ce72ff",
  "file_entries": [
    {
      "data": {
        "Game": {
          "count": 27
        }
      },
      "file_path": "1598747",
      "file_size": 38796
    },
    {
      "data": {
        "Turn": {
          "turns": [
            {
              "day": 1,
              "elements": 3,
              "player_id": 3842324
            },
            {
              "day": 1,
              "elements": 4,
              "player_id": 3851197
            },
            {
              "day": 2,
              "elements": 5,
              "player_id": 3842324
            },
            {
              "day": 2,
              "elements": 6,
              "player_id": 3851197
            },
            {
              "day": 3,
              "elements": 7,
              "player_id": 3842324
            },
            {
              "day": 3,
              "elements": 8,
              "player_id": 3851197
            },
            {
              "day": 4,
              "elements": 9,
              "player_id": 3842324
            },
            {
              "day": 4,
              "elements": 11,
              "player_id": 3851197
            },
            {
              "day": 5,
              "elements": 12,
              "player_id": 3842324
            },
            {
              "day": 5,
              "elements": 14,
              "player_id": 3851197
            },
            {
              "day": 6,
              "elements": 15,
              "player_id": 3842324
            },
            {
              "day": 6,
              "elements": 17,
              "player_id": 3851197
            },
            {
              "day": 7,
              "elements": 17,
              "player_id": 3842324
            },
            {
              "day": 7,
              "elements": 20,
              "player_id": 3851197
            },
            {
              "day": 8,
              "elements": 21,
              "player_id": 3842324
            },
            {
              "day": 8,
              "elements": 24,
              "player_id": 3851197
            },
            {
              "day": 9,
              "elements": 24,
              "player_id": 3842324
            },
            {
              "day": 9,
              "elements": 28,
              "player_id": 3851197
            },
            {
              "day": 10,
              "elements": 27,
              "player_id": 3842324
            },
            {
              "day": 10,
              "elements": 32,
              "player_id": 3851197
            },
            {
              "day": 11,
              "elements": 31,
              "player_id": 3842324
            },
            {
              "day": 11,
              "elements": 34,
              "player_id": 3851197
            },
            {
              "day": 12,
              "elements": 32,
              "player_id": 3842324
            },
            {
              "day": 12,
              "elements": 38,
              "player_id": 3851197
            },
            {
              "day": 13,
              "elements": 31,
              "player_id": 3842324
            },
            {
              "day": 13,
              "elements": 34,
              "player_id": 3851197
            },
            {
              "day": 14,
              "elements": 1,
              "player_id": 3842324
            }
          ]
        }
      },
      "file_path": "a1598747",
      "file_size": 36225
    }
  ]
}
