crates/awbw-replay/tests/snapshots/snapshots__replay_snapshots@replay_1714166_rout_2026-08-21.zip.snap
---
source: crates/awbw-replay/tests/snapshots.rs
expression: snapshot
input_file: assets/replays/replay_1714166_rout_2026-08-21.zip
---
{
  "checksum": "0x0728706516a585d31b01dbf7764e90e028db2f9154bdac5bada01402c6578d66",
  "file_entries": [
    {
      "data": {
        "Game": {
          "count": 1
        }
      },
      "file_path": "1714166",
      "file_size": 1223
    },
    {
      "data": {
        "Turn": {
          "turns": [
            {
              "day": 1,
              "elements": 2,
              "player_id": 4117803
            }
          ]
        }
      },
      "file_path": "a1714166",
      "file_size": 764
    }
  ]
}
